Updated home and product pages

--- a/templates/product.html
+++ b/templates/product.html
@@ -30,11 +30,11 @@
     Add to Cart
 </button> 
 
-<form action="/checkout" method="GET" style="display: inline;">
+<!-- <form action="/checkout" method="GET" style="display: inline;">
     <button type="submit" style="background-color: blue; color: white; padding: 15px 30px; border: none; cursor: pointer; font-size: 25px;">
         Checkout
     </button>
-</form>
+</form> -->
 
 <p style="color: beige;">Category: {{ product[2] }}</p>
 <p style="color: goldenrod;">Price: {{ product[3] }}</p>
